# UMS-Store-API

./: .dockerignore  .env.example  .gitignore  Dockerfile  build.sh  command.py  docker-compose.yml  entrypoint.sh  helper.py  lint-fix.sh  lint.sh  manage.py  pyproject.toml  requirements.txt  run  run.py  setup.sh  vercel.json
api/: exception.py  mixins.py  pagination.py  serializers.py  urls.py  utils.py  views.py
api/templates/: home.html
authentication/: adapter.py  admin.py  auth.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_is_staff.py
cashier_books/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
cashier_books/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
coupons/: admin.py  urls.py
coupons/migrations/: 0001_initial.py
coupons/models/: coupon.py  coupon_code.py
coupons/serializers/: coupon.py  coupon_code.py
coupons/views/: coupon.py  coupon_code.py
products/: admin.py  urls.py
products/migrations/: 0001_initial.py  0002_alter_product_price.py  0002_alter_productsku_payout.py  0002_productsku.py  0002_productsku_supplier.py  0003_alter_productcategory_options.py  (+3 more)
purchase_orders/: admin.py  urls.py
store/: admin.py  models.py  serializers.py  urls.py  views.py
suppliers/: admin.py  models.py  serializers.py  urls.py  views.py
transactions/: admin.py  models.py  serializers.py  urls.py  views.py
ums_store/: settings.py  urls.py  wsgi.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
(+61 files in other folders)
