[project]
name = "config"
version = "0.1.0"
description = ""
authors = [
    {name = "Zavier Ferodova",email = "zavierferodova@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-storages (>=1.14.6,<2.0.0)",
    "google-cloud-storage (>=3.3.0,<4.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-cleanup (>=9.0.0,<10.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "dj-rest-auth (>=7.0.1,<8.0.0)",
    "django-allauth (>=65.11.0,<66.0.0)",
    "cryptography (>=45.0.6,<46.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "DJ"]
ignore = ["E501", "W293", "DJ001"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.mccabe]
max-complexity = 10
